@@ -59,7 +59,8 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 499212  mmap() with MAP_ALIGNED() returns unaligned pointer
 501119  memcheck/tests/pointer-trace fails when run on NFS filesystem
 501194  Fix ML_(check_macho_and_get_rw_loads) so that it is correct for any number of segment commands
-501348 glibc built with -march=x86-64-v3 does not work due to ld.so memcmp
+501348  glibc built with -march=x86-64-v3 does not work due to ld.so memcmp
+501479  Illumos DRD pthread_mutex_init wrapper errors
 
 
 To see details of a given bug, visit
